# ThunderDots

./: .gitignore  CITATION.cff  LICENSE.md  Makefile  README.md  RELEASE.md  main.py  pyproject.toml  pytest.ini  update.md
.github/workflows/: ci.yml  release.yml
mkdocs/: mkdocs.yml
mkdocs/docs/: api-reference.md  caching-async.md  configuration.md  exports.md  fragmentation.md  index.md  installation.md  metadata-validation.md  quickstart.md  troubleshooting.md
mkdocs/docs/notebooks/: thunderdots_playground.ipynb
mkdocs/docs/notebooks/artifacts/thunderdots/: resources_cache.csv  results.json
mkdocs/docs/stylesheets/: extra.css
mkdocs/overrides/partials/: copyright.html
mkdocs/site/: 404.html  index.html  sitemap.xml
mkdocs/site/api-reference/: index.html
mkdocs/site/caching-async/: index.html
mkdocs/site/configuration/: index.html
mkdocs/site/exports/: index.html
mkdocs/site/fragmentation/: index.html
mkdocs/site/installation/: index.html
mkdocs/site/metadata-validation/: index.html
mkdocs/site/notebooks/thunderdots_playground/: index.html  thunderdots_playground.ipynb
mkdocs/site/quickstart/: index.html
mkdocs/site/search/: search_index.json
mkdocs/site/stylesheets/: extra.css
mkdocs/site/troubleshooting/: index.html
scripts/: main.py
tests/: conftest.py  test_client_offline.py  test_exports_and_validation.py  test_fixtures_integrity.py  test_linked_parents.py  test_metadata_and_config.py  test_online_dts.py  test_tei_extraction.py
tests/fixtures/json/: collection_encpos_2025.json  navigation_encpos_2025_01.json  resource_encpos_2025_01.json
tests/fixtures/xml/: encpos_1893_05.xml  smcp_pr_0004.xml
thunderdots/: __init__.py  __version__.py  client.py  config.py  fetcher.py  orm.py  stats.py  ui.py
thunderdots/extract/: parents.py  resources.py  tei.py  walker.py
thunderdots/native/go/: go.mod
thunderdots/native/go/cmd/thunderdots/: main.go
thunderdots/normalize/: __init__.py  dates.py  metadata.py  output.py
thunderdots/validation/: __init__.py  models.py  rules.py  schemas.py  validators.py
