[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "thunderdots"
dynamic = ["version"]
description = "ThunderDots is a Python client for DTS (Distributed Text Services) endpoints, initially built for DoTS."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Lucas Terriel" },
    { name = "École nationale des chartes - PSL" }
]
keywords = ["dts", "tei", "xml", "digital-humanities", "corpus", "dots"]

dependencies = [
    "edtf>=5.0.1",
    "h2>=4.3.0",
    "httpx[http2]>=0.28.1",
    "jsonschema>=4.26.0",
    "lxml>=6.0.2",
    "notebook>=7.5.6",
    "rich>=14.3.2",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "build",
    "twine",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5",
    "mkdocs-jupyter>=0.25",
    "jupyter",
    "ipykernel",
]

all = []

[project.urls]
Homepage = "https://github.com/chartes/thunderdots"
Repository = "https://github.com/chartes/thunderdots"
Documentation = "https://chartes.github.io/ThunderDots/"
Issues = "https://github.com/chartes/thunderdots/issues"

[tool.setuptools.packages.find]
include = ["thunderdots*"]

[tool.setuptools_scm]
version_file = "thunderdots/__version__.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100

[tool.uv.sources]
thunderdots = { workspace = true }

[dependency-groups]
dev = [
#    "thunderdots",
]
